--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "first-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://wmclaug2.github.io/react-todos",
+  "homepage":"https://wmclaug2.github.io/react-todos",
   "devDependencies": {
     "gh-pages": "^0.12.0",
     "react-scripts": "0.8.5"
