--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "first-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://wmclaug2.github.io/react-todos",
+  "homepage": "https://wmclaug2.github.io/react-todos",
   "devDependencies": {
     "gh-pages": "^0.12.0",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
